Added menu items

--- a/index.html
+++ b/index.html
@@ -37,8 +37,11 @@
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav navbar-right">
             <li><a href="#about-organism">PROJECT</a></li>
-            <li><a href="#societal-impact">SOCIETY</a></li>
+            <li><a href="#outreach">OUTREACH</a></li>
             <li><a href="#project">THE TEAM</a></li>
+            <li><a href="#lab">LAB</a></li>
+            <li><a href="#modelling">MODELLING</a></li>
+            <li><a href="#project">JOURNAL</a></li>
           </ul>
         </div>
       </div>
