--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
     <div class="jumbotron text-center">
       <img src='images/logo_iGEM_Leiden.png' width='300'/>
       <p style='font-size: 3em'> <i>E. colinizer</i></p>
+      <p style='font-size: 1em; position: relative; top: -25px; margin-bottom: -15px;'> Conquering Mars, one gene at a time </p>
       <a class='smooth' href='#abstract'><i class="fa fa-angle-down fa-5x" aria-hidden="true"></i></a>
     </div>
 
