--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <title> iGEM Leiden Wiki </title>
 
@@ -7,159 +6,135 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="utf-8">
 
-    <link rel="stylesheet" href="libraries/bootstrap-3.3.6-dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="libraries/font-awesome-4.6.3/css/font-awesome.min.css"/>
-    <script type="text/javascript" src="libraries/jquery-1.12.4.min.js"></script>
-    <script type="text/javascript" src="libraries/bootstrap-3.3.6-dist/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="http://2016.igem.org/Team:Leiden/libraries/bootstrap-3-3-6-dist/css/bootstrap-min?action=raw&ctype=text/css">
+    <link rel="stylesheet" href="http://2016.igem.org/Team:Leiden/libraries/font-awesome-4-6-3/css/font-awesome-min?action=raw&ctype=text/css" type='text/css'/>
+    <script type="text/javascript" src="http://2016.igem.org/Team:Leiden/libraries/jquery-1-12-4?action=raw&ctype=text/js"></script>
+    <script type="text/javascript" src="http://2016.igem.org/Team:Leiden/libraries/bootstrap-3-3-6-dist/js/bootstrap-min?action=raw&ctype=text/js"></script>
 
-    <link rel="stylesheet" href="style/fonts/Montserrat.css"/>
-    <link rel="stylesheet" href="Style/fonts/Lato.css"/>
+    <link rel="stylesheet" href="http://2016.igem.org/Team:Leiden/style/fonts/Montserrat?action=raw&ctype=text/css"/>
+    <link rel="stylesheet" href="http://2016.igem.org/Team:Leiden/style/fonts/Lato?action=raw&ctype=text/css"/>
 
-    <link rel="stylesheet" href="style/main.css"/>
-    <script type="text/javascript" src="scripts/smooth-scrolling.js"></script>
+    <link rel="stylesheet" href="http://2016.igem.org/Team:Leiden/style/main?action=raw&ctype=text/css"/>
+    <script type="text/javascript" src="http://2016.igem.org/Team:Leiden/scripts/smoothscrolling?action=raw&ctype=text/css"></script>
+
+    <style type='text/css'>
+      #top_title, #sideMenu{
+        display: none;
+      }
+
+      #content{
+        width: 100%;
+        margin: 0;
+        padding: 0;
+      }
+    </style>
   </head>
   <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
-
-    <div id='nav-background'></div>
-    <nav class="navbar navbar-default navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <a class="navbar-brand" href="index.html">
-            <img alt="iGEM" src="images/logo_iGEM_Leiden.png" width="40" style="position: relative; top: -10px;"/>
-          </a>
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">LEIDEN</a>
+    <div id="body-wrapper">
+      <div id='nav-background' style='position: absolute; top: 0px;'></div>
+      <nav class="navbar navbar-default navbar-fixed-top" style='position: absolute; top: 0px;'>
+        <div class="container">
+          <div class="navbar-header">
+            <a class="navbar-brand" href="index.html">
+              <img alt="iGEM" src="http://2016.igem.org/wiki/images/3/3f/Team-Leiden-images-logo.png" width="40" style="position: relative; top: -10px;"/>
+            </a>
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">LEIDEN</a>
+          </div>
+          <div class="collapse navbar-collapse" id="myNavbar">
+            <ul class="nav navbar-nav navbar-right">
+              <!--<li><a href="#about-organism">PROJECT</a></li>
+              <li><a href="#outreach">OUTREACH</a></li>
+              <li><a href="#project">THE TEAM</a></li>
+              <li><a href="#lab">LAB</a></li>
+              <li><a href="#modelling">MODELLING</a></li>
+              <li><a href="#project">JOURNAL</a></li>-->
+            </ul>
+          </div>
         </div>
-        <div class="collapse navbar-collapse" id="myNavbar">
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="#about-organism">PROJECT</a></li>
-            <li><a href="#outreach">OUTREACH</a></li>
-            <li><a href="#project">THE TEAM</a></li>
-            <li><a href="#lab">LAB</a></li>
-            <li><a href="#modelling">MODELLING</a></li>
-            <li><a href="#project">JOURNAL</a></li>
-          </ul>
+      </nav>
+
+      <div id='header-background'>
+
+      </div>
+      <div class="jumbotron text-center">
+        <img src='http://2016.igem.org/wiki/images/2/27/Team-Leiden-images-logo-radiating.png' width='300'/>
+        <p style='font-size: 42px; color: white; text-align: center; font-family: Montserrat, sans-serif; font-weight: normal;'> <i>E. colinizer</i></p>
+        <!-- <p style='font-size: 1em; position: relative; top: -25px; margin-bottom: -15px;'> Conquering Mars, one gene at a time </p> -->
+        <a class='smooth' href='#abstract'><i class="fa fa-angle-down fa-5x" aria-hidden="true"></i></a>
+      </div>
+
+      <div id="abstract" style='margin-top: -55px;' class="container-fluid bg-grey">
+        <div class="row">
+            <div class='col-sm-2'></div>
+            <div class='col-sm-8'>
+              <p> <b> Abstract </b> </p>
+              <p class="text-justify">Almost 47 years ago, Neil Armstrong spoke his famous words: “That’s one small step for man, one giant leap for mankind”. The first man on the moon is a fact. Nowadays, scientist around the world are trying to put the first man on Mars. However, before this is even possible, an important obstacle need to be overcome. Namely; 0,5-1% of all mars soil contains the, for humans, very toxic perchlorate (ClO4). This perchlorate is toxic for humans because it disrupts iodine uptake by the thyroid gland. The thyroid gland produces hormones that regulate our overall metabolism and are crucial for organ development in children. This would mean that, once humans are able to go to Mars, it isn’t even possible to survive there.
+  Luckily, we have found a solution.
+  Like the beginning of live on earth, bacteria can possibly be the beginning of live on Mars. Using an E.coli bacterium, we will engineer a bacterium that is capable of turning perchlorate in non- toxic chloride ions and oxygen.  This way we not only eliminate the toxic perchlorate, but also produce oxygen, which is fundamental for human life. We will also present the effects of Martian gravitation on (known) genes using the same E. coli bacterium
+  Possibly, the small step made with these bacteria, can be a great leap for mankind. </p>
+            </div>
+            <div class='col-sm-2'></div>
+          </div>
         </div>
       </div>
-    </nav>
 
-    <div id='header-background'>
+      <div id="contact" class='container-fluid bg-white'>
+        <div class="row">
+          <div class='col-sm-2'>
 
-    </div>
-    <div class="jumbotron text-center">
-      <img src='images/logo_iGEM_Leiden_Jumbo.png' width='300'/>
-      <p style='font-size: 3em'> <i>E. colinizer</i></p>
-      <p style='font-size: 1em; position: relative; top: -25px; margin-bottom: -15px;'> Conquering Mars, one gene at a time </p>
-      <a class='smooth' href='#abstract'><i class="fa fa-angle-down fa-5x" aria-hidden="true"></i></a>
-    </div>
-
-    <div id="abstract" style='margin-top: -55px;' class="container-fluid bg-grey">
-      <div class="row">
-          <div class='col-sm-2'></div>
+          </div>
           <div class='col-sm-8'>
-            <p> <b> Abstract </b> </p>
-            <p class="text-justify"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus venenatis magna sed purus imperdiet, vitae placerat eros blandit. Praesent pharetra aliquam eros, ut semper leo. Nulla sollicitudin consequat neque commodo mattis. Integer arcu sem, ullamcorper at egestas vel, faucibus quis velit. Sed id suscipit nulla. Vivamus pharetra velit dolor, id iaculis nulla pellentesque vel. Etiam consectetur lorem et risus maximus, sed molestie purus pulvinar. Nunc tortor purus, pharetra eget urna ut, pharetra ultrices sem. Aenean enim enim, porttitor et malesuada eget, congue sit amet justo. Etiam dictum commodo urna at elementum. In fermentum pulvinar fermentum. Sed felis erat, rhoncus in elit in, molestie scelerisque erat. Etiam laoreet odio quis justo laoreet, ut vehicula enim finibus. </p>
+            <h3> Contact information </h3>
+            <p> We would love to get in touch with you! You can direct any questions that you may have to <a style='font-family: Montserrat, sans-serif; font-size: 12pt; color: rgb(51, 122, 183);' href='mailto:igem@science.leidenuniv.nl'> igem@science.leidenuniv.nl </a></p>
           </div>
-          <div class='col-sm-2'></div>
+          <div class='col-sm-2'>
+
+          </div>
+        </div>
+      </div>
+
+      <div class="container-fluid text-center bg-grey">
+        <div class="row">
+          <div class='col-sm-12'>
+            <a class='smooth' href="#myPage" title="To Top">
+              <a class='smooth' href='#myPage'><i class="fa fa-angle-up" aria-hidden="true"></i></a>
+            </a>
+          </div>
+        </div>
+
+
+        <div class="row" style='position: relative; left: -22px;'>
+          <div class="col-sm-4">
+            <ul style="list-style-type: none;">
+              <!-- <li> About </li>
+              <li> Society </li>
+              <li> Project </li> -->
+            </ul>
+          </div>
+          <div class="col-sm-4">
+            <ul style="list-style-type: none; list-style-image: none;">
+              <li> <a style='font-family: Montserrat, sans-serif; font-size: 12pt; color: rgb(51, 122, 183);' href='http://leidenuniv.nl'> Leiden University </a> </li>
+              <li> <a style='font-family: Montserrat, sans-serif; font-size: 12pt; color: rgb(51, 122, 183);' href='http://www.airbusdefenceandspacenetherlands.nl'> Airbus Defence and Space Netherlands </a> </li>
+              <li> <a style='font-family: Montserrat, sans-serif; font-size: 12pt; color: rgb(51, 122, 183);' href='http://2016.igem.org/Team:Leiden/Templates'> Wiki templates </a> </li>
+            </ul>
+          </div>
+          <div class="col-sm-4">
+            <ul style="list-style-type: none;">
+            </ul>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class='col-sm-12'>
+            <p style='text-align: center'> iGEM Leiden is an intiative by students from Leiden University </p>
+          </div>
         </div>
       </div>
     </div>
-
-    <div id="overview" class="container-fluid text-center bg-white">
-      <h2>Overview</h2>
-      <br>
-      <div class="row">
-        <div class="col-sm-4">
-          <div class='logo-small'>
-            <i class="fa fa-lock fa-5x" aria-hidden="true"></i>
-          </div>
-          <h4>Project</h4>
-          <p>Lorem ipsum dolor sit amet..</p>
-        </div>
-        <div class="col-sm-4">
-          <div class='logo-small'>
-            <i class="fa fa-gears fa-5x" aria-hidden="true"></i>
-          </div>
-          <h4>Team</h4>
-          <p>Lorem ipsum dolor sit amet..</p>
-        </div>
-        <div class="col-sm-4">
-          <div class='logo-small'>
-            <i class="fa fa-star fa-5x" aria-hidden="true"></i>
-          </div>
-          <h4>Society</h4>
-          <p>Lorem ipsum dolor sit amet..</p>
-        </div>
-        </div>
-        <br><br>
-      <div class="row">
-        <div class="col-sm-4">
-          <div class='logo-small'>
-            <i class="fa fa-tree fa-5x" aria-hidden="true"></i>
-          </div>
-           <h4>Ethics</h4>
-          <p>Lorem ipsum dolor sit amet..</p>
-        </div>
-        <div class="col-sm-4">
-          <div class='logo-small'>
-            <i class="fa fa-trash fa-5x" aria-hidden="true"></i>
-          </div>
-          <h4>BioBricks</h4>
-          <p>Lorem ipsum dolor sit amet..</p>
-        </div>
-        <div class="col-sm-4">
-          <div class='logo-small'>
-            <i class="fa fa-suitcase fa-5x" aria-hidden="true"></i>
-          </div>
-           <h4>Collaborations</h4>
-          <p>Lorem ipsum dolor sit amet..</p>
-        </div>
-      </div>
-    </div>
-
-    <footer class="container-fluid text-center bg-grey">
-      <div class="row">
-        <div class='col-sm-12'>
-          <a class='smooth' href="#myPage" title="To Top">
-            <span class="glyphicon glyphicon-chevron-up"></span>
-          </a>
-        </div>
-      </div>
-
-      <div class="row" style='position: relative; left: -22px;'>
-        <div class="col-sm-4">
-          <ul style="list-style-type: none;">
-            <li> About </li>
-            <li> Society </li>
-            <li> Project </li>
-          </ul>
-        </div>
-        <div class="col-sm-4">
-          <ul style="list-style-type: none;">
-            <li> Leiden University </li>
-            <li> Evil Galactic Empire </li>
-            <li> Rijke tatas </li>
-          </ul>
-        </div>
-        <div class="col-sm-4">
-          <ul style="list-style-type: none;">
-            <li> General </li>
-            <li> Jamboree </li>
-            <li> BioBricks </li>
-          </ul>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class='col-sm-12'>
-          <p> iGEM Leiden is an intiative by students from Leiden University </p>
-        </div>
-      </div>
-    </footer>
-
   </body>
 </html>
