Added basic project

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
   </head>
   <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
     <div id="body-wrapper">
-      <div id='nav-background' style='position: absolute; top: 0px;'></div>
-      <nav class="navbar navbar-default navbar-fixed-top" style='position: absolute; top: 0px;'>
+      <div id='nav-background' style='position: fixed; top: 0px;'></div>
+      <nav class="navbar navbar-default navbar-fixed-top" style='position: fixed; top: 0px;'>
         <div class="container">
           <div class="navbar-header">
             <a class="navbar-brand" href="index.html">
@@ -47,12 +47,9 @@
           </div>
           <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav navbar-right">
-              <!--<li><a href="#about-organism">PROJECT</a></li>
-              <li><a href="#outreach">OUTREACH</a></li>
-              <li><a href="#project">THE TEAM</a></li>
-              <li><a href="#lab">LAB</a></li>
-              <li><a href="#modelling">MODELLING</a></li>
-              <li><a href="#project">JOURNAL</a></li>-->
+              <li><a href="index.html">OVERVIEW</a></li>
+              <li><a href="project.html">PROJECT</a></li>
+              <li><a href="events.html">EVENTS</a></li>
             </ul>
           </div>
         </div>
@@ -73,10 +70,12 @@
             <div class='col-sm-2'></div>
             <div class='col-sm-8'>
               <p> <b> Abstract </b> </p>
-              <p class="text-justify">Almost 47 years ago, Neil Armstrong spoke his famous words: “That’s one small step for man, one giant leap for mankind”. The first man on the moon is a fact. Nowadays, scientist around the world are trying to put the first man on Mars. However, before this is even possible, an important obstacle need to be overcome. Namely; 0,5-1% of all mars soil contains the, for humans, very toxic perchlorate (ClO4). This perchlorate is toxic for humans because it disrupts iodine uptake by the thyroid gland. The thyroid gland produces hormones that regulate our overall metabolism and are crucial for organ development in children. This would mean that, once humans are able to go to Mars, it isn’t even possible to survive there.
-  Luckily, we have found a solution.
-  Like the beginning of live on earth, bacteria can possibly be the beginning of live on Mars. Using an E.coli bacterium, we will engineer a bacterium that is capable of turning perchlorate in non- toxic chloride ions and oxygen.  This way we not only eliminate the toxic perchlorate, but also produce oxygen, which is fundamental for human life. We will also present the effects of Martian gravitation on (known) genes using the same E. coli bacterium
-  Possibly, the small step made with these bacteria, can be a great leap for mankind. </p>
+              <p> <b>In the near future, we will finally set foot on our neighbour planet Mars. The soil, however, is highly toxic, which makes agriculture problematic. Luckily, the bacteria of the Leiden iGEM team will be able to detoxify the soil and even produce oxygen out of it! </b> </p>
+            <p class="text-justify">Almost 47 years ago, Neil Armstrong spoke his famous words: “That’s one small step for man, one giant leap for mankind”. The first man on the moon was a fact. Since then, scientist from all around the world are trying to put the first man on Mars. However, before this is even possible, an important obstacle needs to be overcome: 0,5 - 1% of all mars soil contains the, for humans, very toxic perchlorate (ClO<sub>4</sub><sup>-</sup>). This perchlorate is toxic for humans because it disrupts iodine uptake by the thyroid gland, thereby interfering with our overall metabolism. This would mean that, once humans are able to go to Mars, it isn’t even possible to survive there for long.
+Luckily, we have found a solution.
+Like the beginning of life on earth, bacteria can possibly be the beginning of life on Mars. By transferring eight genes to an <i>E.coli</i> bacterium, we will engineer a system that is capable of turning perchlorate in non-toxic chloride ions and oxygen.  This way we will not only detoxify the soil, but also produce oxygen, which is fundamental for human life. </p>
+            <p> Possibly, the small step made with these bacteria, can be a great leap for mankind. </p>
+
             </div>
             <div class='col-sm-2'></div>
           </div>
@@ -131,7 +130,7 @@
 
         <div class="row">
           <div class='col-sm-12'>
-            <p style='text-align: center'> iGEM Leiden is an intiative by students from Leiden University </p>
+            <p style='text-align: center'> iGEM Leiden is an initiative by students from Leiden University </p>
           </div>
         </div>
       </div>
