Updated to add a project description and event summary

--- a/description.html
+++ b/description.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title> iGEM Leiden Wiki </title>
+    <title> iGEM Leiden Wiki / Project </title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -31,12 +31,12 @@
   </head>
   <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
     <div id="body-wrapper">
-      <div id='nav-background' style='position: fixed; top: 0px;'></div>
-      <nav class="navbar navbar-default navbar-fixed-top" style='position: fixed; top: 0px;'>
+      <div id='nav-background' style='position: fixed; top: 15px;'></div>
+      <nav class="navbar navbar-default navbar-fixed-top" style='position: fixed; top: 15px;'>
         <div class="container">
           <div class="navbar-header">
             <a class="navbar-brand" href="index.html">
-              <img alt="iGEM" src="http://2016.igem.org/wiki/images/3/3f/Team-Leiden-images-logo.png" width="40" style="position: relative; top: -10px;"/>
+              <img alt="iGEM" src="images/logo_iGEM_Leiden.png" width="40" style="position: relative; top: -10px;"/>
             </a>
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
               <span class="icon-bar"></span>
@@ -45,17 +45,17 @@
             </button>
             <a class="navbar-brand" href="#">LEIDEN</a>
           </div>
-          <div class="collapse navbar-collapse" id="myNavbar">
+          <div class="collapse navbar-collapse" id="myNavbar" style='position: relative; top: -5px;'>
             <ul class="nav navbar-nav navbar-right">
               <li><a href="index.html">OVERVIEW</a></li>
-              <li><a href="project.html">PROJECT</a></li>
+              <li><a href="description.html">PROJECT</a></li>
               <li><a href="events.html">EVENTS</a></li>
             </ul>
           </div>
         </div>
       </nav>
 
-      <div id='header-background'>
+      <div id='header-background' style="background-image: url('http://2016.igem.org/wiki/images/2/23/Team-Leiden-images-project-image07.png');">
 
       </div>
       <div class="jumbotron text-center">
@@ -98,7 +98,7 @@
               <h2 style='margin-bottom: 0px;'> Earth </h2>
               <p>Because of uncertainties about toxicity and health effect at low levels of perchlorate, as well as the effect on environment, this compound raises lots of concerns.
 
-              On earth perchlorate salts are formed naturally in small amounts in our environment. However, the biggest source of perchlorate contamination arises from the use of nitrate fertilizers and the chemical industry. Here the compound is used for a variety of products, of which more than 90% is manufactured as ammonium perchlorate to be used as rocket and missile engine. Also in explosives, flares, fireworks and other industrial processes, this compound is commonly found. Every time someone illuminates beautiful blue-colored firework, think about perchlorate going in the air.
+              On earth perchlorate salts are formed naturally in small amounts in our environment. However, the biggest source of perchlorate contamination arises from the use of nitrate fertilizers and the chemical industry. Here the compound is used for a variety of products, of which more than 90% is manufactured as ammonium perchlorate to be used as rocket and missile engine. Also in explosives, flares, fireworks and other industrial processes, this compound is commonly found. Every time someone illuminates beautiful blue-colored firework, think about perchlorate going in the air. </p>
 
               <table style='text-align: center;'>
                 <tr>
@@ -110,7 +110,7 @@
               </table>
               Figure 1. Sources of perchlorate contamination <br/>
 
-              In 1998 perchlorate was first detected in drinking water in the Southern US, after which the EPA (environmental protection agency) added the compound to its Contaminate candidate list (CCL). Most of the contamination could be associated with military activities. More recent studies found contamination of ground- and surface waters in at least 26 states, which serve as drinking water sources for more than 16 million people. <sup> 5 </sup>  According to the EPA the estimated annual costs for public water systems to comply with a 4microgram/L of perchlorate limit are 120million dollar (in 2013). This is still less than the annual 320 million dollar costs of the Arsenic rule of 10 microgram/L. <sup> 6 </sup>
+              <p>In 1998 perchlorate was first detected in drinking water in the Southern US, after which the EPA (environmental protection agency) added the compound to its Contaminate candidate list (CCL). Most of the contamination could be associated with military activities. More recent studies found contamination of ground- and surface waters in at least 26 states, which serve as drinking water sources for more than 16 million people. <sup> 5 </sup>  According to the EPA the estimated annual costs for public water systems to comply with a 4microgram/L of perchlorate limit are 120million dollar (in 2013). This is still less than the annual 320 million dollar costs of the Arsenic rule of 10 microgram/L. <sup> 6 </sup>
 
               In Europe perchlorate have also been detected in crops. According to the European Commission the presence of perchlorate in fruits and vegetables is more widespread than initially expected, mostly due to the use of certain fertilizers. The toxic compound have also been found in infant formulae, with mean concentrations of 10microgram/kg. <sup> 7 </sup> </p>
 
@@ -126,7 +126,7 @@
                 <ol>
                   <li>  <a href='http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.362.9667&rep=rep1&type=pdf'> http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.362.9667&rep=rep1&type=pdf </a> </li>
                   <li>  <a href='http://www.space.com/21554-mars-toxic-perchlorate-chemicals.html '> http://www.space.com/21554-mars-toxic-perchlorate-chemicals.html </a> </li>
-                  <li>  <a href='#'> Unknown source</a> </li>
+                  <li>  <a href='#'> Hutchinson, S.L. (2004) A Study on the Accumulation of Perchlorate in Young Head Lettuce, final report - U.S. Environmental Protection Agency (September 2004) - June 18 2016 </a> </li>
                   <li>  <a href='http://www.sciencedirect.com/science/article/pii/S0019103513005058 '> http://www.sciencedirect.com/science/article/pii/S0019103513005058  </a> </li>
                   <li>  <a href='http://www.waterrf.org/resources/stateofthesciencereports/perchlorate_stateofthescience.pdf '> http://www.waterrf.org/resources/stateofthesciencereports/perchlorate_stateofthescience.pdf </a> </li>
                   <li>  <a href='http://www.awwa.org/Portals/0/files/legreg/documents/AWWA2013PerchlorateCostAssessment.pdf'> http://www.awwa.org/Portals/0/files/legreg/documents/AWWA2013PerchlorateCostAssessment.pdf </a> </li>
