--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 
     <link rel="stylesheet" href="http://2016.igem.org/Team:Leiden/libraries/bootstrap-3-3-6-dist/css/bootstrap-min?action=raw&ctype=text/css">
     <link rel="stylesheet" href="http://2016.igem.org/Team:Leiden/libraries/font-awesome-4-6-3/css/font-awesome-min?action=raw&ctype=text/css" type='text/css'/>
-    <script type="text/javascript" src="http://2016.igem.org/Team:Leiden/libraries/jquery-1-12-4?action=raw&ctype=text/js"></script>
-    <script type="text/javascript" src="http://2016.igem.org/Team:Leiden/libraries/bootstrap-3-3-6-dist/js/bootstrap-min?action=raw&ctype=text/js"></script>
+    <script type="text/javascript" src="libraries/jquery-1.12.4.min.js"></script>
+    <script type="text/javascript" src="libraries/bootstrap-3-3-6-dist/js/bootstrap.min.js"></script>
 
-    <link rel="stylesheet" href="http://2016.igem.org/Team:Leiden/style/fonts/Montserrat?action=raw&ctype=text/css"/>
+    <link rel="stylesheet" href="style/fonts/Montserrat.css"/>
     <link rel="stylesheet" href="http://2016.igem.org/Team:Leiden/style/fonts/Lato?action=raw&ctype=text/css"/>
 
     <link rel="stylesheet" href="http://2016.igem.org/Team:Leiden/style/main?action=raw&ctype=text/css"/>
@@ -31,12 +31,12 @@
   </head>
   <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
     <div id="body-wrapper">
-      <div id='nav-background' style='position: fixed; top: 0px;'></div>
-      <nav class="navbar navbar-default navbar-fixed-top" style='position: fixed; top: 0px;'>
+      <div id='nav-background' style='position: fixed; top: 15px;'></div>
+      <nav class="navbar navbar-default navbar-fixed-top" style='position: fixed; top: 15px;'>
         <div class="container">
           <div class="navbar-header">
             <a class="navbar-brand" href="index.html">
-              <img alt="iGEM" src="http://2016.igem.org/wiki/images/3/3f/Team-Leiden-images-logo.png" width="40" style="position: relative; top: -10px;"/>
+              <img alt="iGEM" src="images/logo_iGEM_Leiden.png" width="40" style="position: relative; top: -10px;"/>
             </a>
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
               <span class="icon-bar"></span>
@@ -45,10 +45,10 @@
             </button>
             <a class="navbar-brand" href="#">LEIDEN</a>
           </div>
-          <div class="collapse navbar-collapse" id="myNavbar">
+          <div class="collapse navbar-collapse" id="myNavbar" style='position: relative; top: -5px;'>
             <ul class="nav navbar-nav navbar-right">
               <li><a href="index.html">OVERVIEW</a></li>
-              <li><a href="project.html">PROJECT</a></li>
+              <li><a href="description.html">PROJECT</a></li>
               <li><a href="events.html">EVENTS</a></li>
             </ul>
           </div>
