Added basic Sarstedt link

--- a/events.html
+++ b/events.html
@@ -161,6 +161,7 @@ Our main act, was letting visitors create bio-art. Bio-art, being the beautiful 
               <li> <a style='font-family: Montserrat, sans-serif; font-size: 12pt; color: rgb(51, 122, 183);' href='http://leidenuniv.nl'> Leiden University </a> </li>
               <li> <a style='font-family: Montserrat, sans-serif; font-size: 12pt; color: rgb(51, 122, 183);' href='http://www.airbusdefenceandspacenetherlands.nl'> Airbus Defence and Space Netherlands </a> </li>
               <li> <a style='font-family: Montserrat, sans-serif; font-size: 12pt; color: rgb(51, 122, 183);' href='http://2016.igem.org/Team:Leiden/Templates'> Wiki templates </a> </li>
+              <li> <a style='font-family: Montserrat, sans-serif; font-size: 12pt; color: rgb(51, 122, 183);' href='https://www.sarstedt.com/en/home'> Sarstedt </a> </li>
             </ul>
           </div>
           <div class="col-sm-4">
