--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@ Like the beginning of life on earth, bacteria can possibly be the beginning of l
               <li> <a style='font-family: Montserrat, sans-serif; font-size: 12pt; color: rgb(51, 122, 183);' href='http://leidenuniv.nl'> Leiden University </a> </li>
               <li> <a style='font-family: Montserrat, sans-serif; font-size: 12pt; color: rgb(51, 122, 183);' href='http://www.airbusdefenceandspacenetherlands.nl'> Airbus Defence and Space Netherlands </a> </li>
               <li> <a style='font-family: Montserrat, sans-serif; font-size: 12pt; color: rgb(51, 122, 183);' href='http://2016.igem.org/Team:Leiden/Templates'> Wiki templates </a> </li>
+              <li> <a style='font-family: Montserrat, sans-serif; font-size: 12pt; color: rgb(51, 122, 183);' href='https://www.sarstedt.com/en/home'> Sarstedt </a> </li>
             </ul>
           </div>
           <div class="col-sm-4">
