--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="utf-8">
 
-    <link rel="stylesheet" href="http://2016.igem.org/Team:Leiden/libraries/bootstrap-3-3-6-dist/css/bootstrap-min?action=raw&ctype=text/css">
-    <link rel="stylesheet" href="http://2016.igem.org/Team:Leiden/libraries/font-awesome-4-6-3/css/font-awesome-min?action=raw&ctype=text/css" type='text/css'/>
+    <link rel="stylesheet" href="libraries/bootstrap-3.3.6-dist/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="libraries/font-awesome-4.6.3/css/font-awesome.min.css" type='text/css'/>
     <script type="text/javascript" src="libraries/jquery-1.12.4.min.js"></script>
-    <script type="text/javascript" src="libraries/bootstrap-3-3-6-dist/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="libraries/bootstrap-3.3.6-dist/js/bootstrap.min.js"></script>
 
     <link rel="stylesheet" href="style/fonts/Montserrat.css"/>
-    <link rel="stylesheet" href="http://2016.igem.org/Team:Leiden/style/fonts/Lato?action=raw&ctype=text/css"/>
+    <link rel="stylesheet" href="style/fonts/Lato.css"/>
 
-    <link rel="stylesheet" href="http://2016.igem.org/Team:Leiden/style/main?action=raw&ctype=text/css"/>
-    <script type="text/javascript" src="http://2016.igem.org/Team:Leiden/scripts/smoothscrolling?action=raw&ctype=text/css"></script>
+    <link rel="stylesheet" href="style/main.css"/>
+    <script type="text/javascript" src="scripts/smooth-scrolling.js"></script>
 
     <style type='text/css'>
       #top_title, #sideMenu{
