references now bold

--- a/description.html
+++ b/description.html
@@ -122,7 +122,7 @@
 
               <p> <i> Mars will come to fear my botany powers. </i> - Mark Watney, The Martian (2015) </p>
 
-              <p> References: </p> 
+              <p> <b> References: </b> </p> 
 
               <p>
                 <ol>
