sponsor logos and links added to events, index and description

--- a/description.html
+++ b/description.html
@@ -176,6 +176,77 @@
         <div class="row">
           <div class='col-sm-12'>
             <p style='text-align: center'> iGEM Leiden is an initiative by students from Leiden University </p>
+            <p>
+            	<center>
+		         	<table>
+		         		<tr>
+				      		<td style='padding: 20px;'> 
+									<div class="img">
+									  <a target="_blank" href="https://www.NEB.com">
+									  	<img height='50' src='images/sponsor/image00.png' >  
+									  </a>
+									</div>
+								</td>
+								<td style='padding: 20px;'> 
+								  <div class="img">
+									  <a target="_blank" href="http://www.airbusdefenceandspacenetherlands.nl">
+									  	<img height='50' src='images/sponsor/image02.png'  > 
+									  </a>
+									</div>
+								</td>
+									<td style='padding: 20px;'> 
+										<div class="img">
+											<a target="_blank" href="https://www.sarstedt.com/en/home">
+											  <img height='50' src='images/sponsor/image04.png' > 
+											</a>
+										</div>
+									</td>
+
+									<td style='padding: 20px;'> 
+										<div class="img">
+										  <a target="_blank" href="http://www.leidenuniv.nl">
+											 <img height='50' src='images/sponsor/image06.png' > 
+										  </a>
+										</div>
+									</td>	
+							</tr>
+							<tr>
+								<td style='padding: 20px;'> 
+									<div class="img">
+									  <a target="_blank" href="https://www.sigmaaldrich.com">
+										<img height='50' src='images/sponsor/image08.png' > 
+									  </a>
+								  	</div>
+								</td>
+								  
+								<td style='padding: 20px;'> 
+									<div class="img">
+										<a target="_blank" href="http://chdr.nl">
+											<img height='50' src='images/sponsor/image10.png'>  
+										</a>
+									</div>
+								</td>
+		
+
+								<td style='padding: 20px;'> 	 
+									<div class="img">
+										<a target="_blank" href="http://www.dsm.com/corporate/home.html">
+										 <img height='50' src='images/sponsor/image12.png'> 
+									  	</a>
+								 	 </div>
+							 	</td>
+							 
+								<td style='padding: 20px;'> 
+									<div class="img">
+										<a target="_blank" href="http://www.nature.com/nmicrobiol/">
+											<img height='50' src='images/sponsor/image14.png'>   
+										</a>
+									</div>
+								</td>
+							</tr>
+		         	</table>
+		         </center>
+            </p>
           </div>
         </div>
       </div>
