--- a/navbar.html
+++ b/navbar.html
@@ -24,16 +24,23 @@
 					<a href="#"> ACHIEVEMENTS </a> -->
 				</div>
 			</li>
+			
+			<!--
 			<li class="dorpdown">
 			<a href="#lab">LAB</a>
 				<div class="dropdown-content">
 				<!--	<a href="#"> OVERVIEW & RESULTS </a>
-					<a href="#"> LAB SAFETY </a> -->
+					<a href="#"> LAB SAFETY </a>
 				</div>
 			</li>
+			-->
+			
+			<!--
 			<li class= "dropdown">
 			<a href="#modelling">MODELLING</a>
 			</li>
+			-->
+			
 			<li class= "dropdown">
 			<a href="events.html">OUTREACH</a>
 				<div class="dropdown-content">
