--- a/labjournal.html
+++ b/labjournal.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title> iGEM Leiden Wiki : Labjournal </title>
+    <title> iGEM Leiden Wiki : Lab Journal </title>
 	  <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="utf-8">
@@ -51,7 +51,7 @@
 
       </div>
       <div class="jumbotron text-center">
-        <p style='font-size: 100px; color: white; text-align: center; font-family: Montserrat, sans-serif; font-weight: normal;'> Labjournal </p>
+        <p style='font-size: 100px; color: white; text-align: center; font-family: Montserrat, sans-serif; font-weight: normal;'> Lab Journal </p>
       </div>
 
 
