fixed centralizing of rpm page

--- a/rpm_tekst.html
+++ b/rpm_tekst.html
@@ -65,9 +65,21 @@
 	<!-- HIER NOG EEN PLAATJE VAN DE RPM: images/project/rpm 
 	EN BEWEGEND BEELD VAN DE RPM -->
 	
-  <div id="abstract" style='margin-top: -55px;' class="container-fluid bg-white">
+			<div id="introduction" style='margin-top: -55px;' class="container-fluid bg-grey">
+        <div class="row">
+            <div class='col-sm-2'></div>
+            <div class='col-sm-8'>
+
+            </div>
+            <div class='col-sm-2'></div>
+          </div>
+        </div>
+      </div>
+	
+  <div id="abstract" style='margin-top: -120px;' class="container-fluid bg-white">
       <div class="row">
         <!--  <div class='col-sm-12' id='rpm-demo' style='height: 400px;'> -->
+        <div class='col-sm-2'></div>
         <div class='col-sm-8' style='text-align: justify;'>
 			<h2> Random Positioning Machine </h2>
 			To be able to engineer an organism which can thrive on Mars, many factors need to be accounted for such as radiation, low temperature and partial gravity. Since Mars has about 0.4 times the Earth's gravity, gravity dependent processes could be severely affected. Gravity is dominant on large scales, and can seriously affect bacterial colony development, as is well known from previous studies (add reference of Sjoerd here, about the different expressed promoters). <br>
